add link to cpr

--- a/app/src/flowchart/flowchart.html
+++ b/app/src/flowchart/flowchart.html
@@ -41,6 +41,11 @@
         font-size: 12px;
     }
 
+    .go-to-case-link {
+        cursor: pointer;
+        text-decoration: underline;
+    }
+
     .flowchart-headers {
         font-weight: bold;
         position: sticky;
@@ -200,7 +205,7 @@
             <div class="card-content">
                 <div layout="row">
                     <div flex="15">{{i.creationDate | customFlowChartDate }}</div>
-                    <div flex="15">{{i.cprNumber}}</div>
+                    <div flex="15"><span class="go-to-case-link" ng-click="vm.gotoCase(case.caseNumber)">{{i.cprNumber}}</span></div>
                     <div flex="15">{{i.firstName}}</div>
                     <div flex="15">{{i.lastName}}</div>
                     <div flex="40">{{i.mainCharge}}</div>
@@ -227,14 +232,14 @@
                     <table md-table>
                         <tbody md-body>
 
-                            <tr md-row ng-hide="vm.editperid == i.node_uuid" ng-click="vm.gotoCase(case.caseNumber)">
+                            <tr md-row ng-hide="vm.editperid == i.node_uuid">
                                 <td md-cell class="key">Status</td>
                                 <td md-cell class="value" id="statusDisplay_{{ i.node_uuid }}">{{i.status}}</td>
                                 <td md-cell class="key">Samtykke til oplysninger</td>
                                 <td md-cell class="value" id="samtykkeDisplay_{{ i.node_uuid }}">{{i.samtykkeopl}}</td>
                             </tr>
 
-                            <tr md-row ng-show="vm.editperid == i.node_uuid" ng-click="vm.gotoCase(case.caseNumber)">
+                            <tr md-row ng-show="vm.editperid == i.node_uuid">
                                 <td md-cell class="key">Status</td>
                                 <td md-cell class="value">
                                     <md-autocomplete 
@@ -257,14 +262,14 @@
                                 </td>
                             </tr>
 
-                            <tr md-row ng-hide="vm.editperid == i.node_uuid" ng-click="vm.gotoCase(case.caseNumber)">
+                            <tr md-row ng-hide="vm.editperid == i.node_uuid">
                                 <td md-cell class="key">Arrest</td>
                                 <td md-cell class="value" id="arrestDisplay_{{ i.node_uuid }}">{{i.arrest}}</td>
                                 <td md-cell class="key">Tolk sprog</td>
                                 <td md-cell class="value" id="tolksprogDisplay_{{ i.node_uuid }}">{{i.tolksprog}}</td>
                             </tr>
 
-                            <tr md-row ng-show="vm.editperid == i.node_uuid" ng-click="vm.gotoCase(case.caseNumber)">
+                            <tr md-row ng-show="vm.editperid == i.node_uuid">
                                 <td md-cell class="key">Arrest</td>
                                 <td md-cell class="value">
                                     <md-input-container>
@@ -279,14 +284,14 @@
                                 </td>
                             </tr>
 
-                            <tr md-row ng-hide="vm.editperid == i.node_uuid" ng-click="vm.gotoCase(case.caseNumber)">
+                            <tr md-row ng-hide="vm.editperid == i.node_uuid">
                                 <td md-cell class="key">Socialrådgiver</td>
                                 <td md-cell class="value" id="socialworkerDisplay_{{ i.node_uuid }}">{{i.socialworker}}</td>
                                 <td md-cell class="key">Fritid ved (navne)</td>
                                 <td md-cell class="value" id="fritidvedDisplay_{{ i.node_uuid }}">{{i.fritidved}}</td>
                             </tr>
 
-                            <tr md-row ng-show="vm.editperid == i.node_uuid" ng-click="vm.gotoCase(case.caseNumber)">
+                            <tr md-row ng-show="vm.editperid == i.node_uuid">
                                 <td md-cell class="key">Socialrådgiver</td>
                                 <td md-cell class="value">
                                     <md-autocomplete md-selected-item="flow.socialworker"
@@ -309,7 +314,7 @@
                                 </td>
                             </tr>
 
-                            <tr md-row ng-hide="vm.editperid == i.node_uuid" ng-click="vm.gotoCase(case.caseNumber)">
+                            <tr md-row ng-hide="vm.editperid == i.node_uuid">
                                 <td md-cell class="key">Læge</td>
                                 <td md-cell class="value" id="doctorDisplay_{{ i.node_uuid }}">{{ i.doctor}}</td>
 
@@ -317,7 +322,7 @@
                                 <td md-cell class="value" id="psychologistDisplay_{{ i.node_uuid }}" md-cell class="">{{ i.psychologist}}</td>
                             </tr>
 
-                            <tr md-row ng-show="vm.editperid == i.node_uuid" ng-click="vm.gotoCase(case.caseNumber)">
+                            <tr md-row ng-show="vm.editperid == i.node_uuid">
                                 <td md-cell class="key">Læge</td>
                                 <td md-cell class="value">
                                     <md-autocomplete 
@@ -350,14 +355,14 @@
                                 </td>
                             </tr>
 
-                            <tr md-row ng-hide="vm.editperid == i.node_uuid" ng-click="vm.gotoCase(case.caseNumber)">
+                            <tr md-row ng-hide="vm.editperid == i.node_uuid">
                                 <td md-cell class="key">Kommentar</td>
                                 <td md-cell class="value" id="kommentarDisplay_{{ i.node_uuid }}">{{i.kommentar }}</td>
                                 <td md-cell class="key">Kvalitetskontrol</td>
                                 <td md-cell class="value" id="kvalitetskontrolDisplay_{{ i.node_uuid }}">{{i.kvalitetskontrol}}
                             </tr>
 
-                            <tr md-row ng-show="vm.editperid == i.node_uuid" ng-click="vm.gotoCase(case.caseNumber)">
+                            <tr md-row ng-show="vm.editperid == i.node_uuid">
                                     <td md-cell class="key">Kommentar</td>
                                     <td md-cell class="value">
                                         <md-input-container>
@@ -372,14 +377,14 @@
                                 </td>
                             </tr>
 
-                            <tr md-row ng-hide="vm.editperid == i.node_uuid" ng-click="vm.gotoCase(case.caseNumber)">
+                            <tr md-row ng-hide="vm.editperid == i.node_uuid">
                                 <td md-cell class="key">Psykolog fokus</td>
                                 <td md-cell class="value" id="psykologfokusDisplay_{{ i.node_uuid }}">{{ i.psykologfokus }}</td>
                                 <td md-cell class="key"></td>
                                 <td md-cell class="value"></td>
                             </tr>
 
-                            <tr md-row ng-show="vm.editperid == i.node_uuid" ng-click="vm.gotoCase(case.caseNumber)">
+                            <tr md-row ng-show="vm.editperid == i.node_uuid">
                                 <td md-cell class="key">Psykolog fokus</td>
                                 <td md-cell class="value">
                                     <md-input-container>
