--- a/app/src/flowchart/flowchart.html
+++ b/app/src/flowchart/flowchart.html
@@ -212,6 +212,8 @@
     <div class="flowchart-content">
 
         <md-card class="dropdown-card" id="{{ i.node_uuid }}" ng-hide="!(vm.editperid == i.node_uuid) && vm.startedit" ng-if="!vm.minesager" ng-repeat="i in vm.ongoing">
+            <a class="anchor" id="top_{{ i.node_uuid }}"></a>
+
             <div class="card-content">
                 <div layout="row">
                     <div flex="15">{{i.creationDate | customFlowChartDate }}</div>
