--- a/app/src/flowchart/data-row.html
+++ b/app/src/flowchart/data-row.html
@@ -1,3 +1,5 @@
+<a class="anchor" id="top_{{ i.node_uuid }}"></a>
+
 <md-card id="{{ i.node_uuid }}" ng-hide="!(vm.editperid == i.node_uuid) && vm.startedit">
     <div class="card-content">
         <div layout="row">
