--- a/app/src/authorityMail/authorityMail.view.html
+++ b/app/src/authorityMail/authorityMail.view.html
@@ -16,8 +16,8 @@
             <md-autocomplete flex 
             md-selected-item="vm.payload.authority" 
             md-search-text="authoritySearch"
-            md-items="auth in vm.propertyFilter(vm.properties['emailAuthorities'],authoritySearch)" 
-            md-item-text="auth" 
+            md-items="auth in vm.propertyFilter(vm.properties['emailAuthorities'],authoritySearch)"
+            md-item-text="auth"
             md-min-length="0" 
             md-floating-label="Myndighed"
             md-clear-button="true"
@@ -33,8 +33,11 @@
             <input ng-model="vm.payload.subject" required>
           </md-input-container>
 
+
+            <md-checkbox ng-model="vm.payload.defaultbody">standardtekst</md-checkbox>
         <md-input-container class="md-block">
           <label>Besked</label>
+
           <textarea class="textarea-highlight" ng-model="vm.payload.body" rows="10" required></textarea>
         </md-input-container>
 
