--- a/app/src/flowchart/data-row.html
+++ b/app/src/flowchart/data-row.html
@@ -194,17 +194,29 @@
                             </tr>
                             <!-- kommentar, stop -->
 
-                            <!-- doctor, start -->
+                            <!-- kommentar, start -->
+                            <tr md-row>
+                                <td md-cell class="key">OplysningerEkstern:</td>
+                                <td md-cell class="value" ng-hide="vm.editperid == i.node_uuid" id="oplysningerEksterntDisplay_{{ i.node_uuid }}">{{ i.oplysningerEksternt}}</td>
+                                <td md-cell class="value" ng-show="vm.editperid == i.node_uuid">
+                                    <md-input-container>
+                                        <textarea ng-model="flow.oplysningerEksternt" rows="3"></textarea>
+                                    </md-input-container>
+                                </td>
+                            </tr>
+                            <!-- kommentar, stop -->
+
+                            <!-- Kvalitetskontrol, start -->
                             <tr md-row>
                                 <td md-cell class="key">Kvalitetskontrol:</td>
                                 <td md-cell class="value" ng-hide="vm.editperid == i.node_uuid" id="kvalitetskontrolDisplay_{{ i.node_uuid }}">{{ i.kvalitetskontrol}}</td>
                                 <td md-cell class="value" ng-show="vm.editperid == i.node_uuid">
                                     <md-input-container>
-                                        <textarea ng-model="flow.kvalitetskontrol" rows="3"></textarea>
+                                        <textarea ng-model="flow.kvalitetskontrol" ></textarea>
                                     </md-input-container>
                                 </td>
                             </tr>
-                            <!-- doctor, stop -->
+                            <!-- Kvalitetskontrol, stop -->
                         </tbody>
                     </table>
                 </div>
