bugfix - renamed string

--- a/app/src/flowchart/data-row.html
+++ b/app/src/flowchart/data-row.html
@@ -196,7 +196,7 @@
 
                             <!-- kommentar, start -->
                             <tr md-row>
-                                <td md-cell class="key">OplysningerEkstern:</td>
+                                <td md-cell class="key">Oplysninger (eksternt journalmateriale):</td>
                                 <td md-cell class="value" ng-hide="vm.editperid == i.node_uuid" id="oplysningerEksterntDisplay_{{ i.node_uuid }}">{{ i.oplysningerEksternt}}</td>
                                 <td md-cell class="value" ng-show="vm.editperid == i.node_uuid">
                                     <md-input-container>
