--- a/app/src/system_settings/reports/reports.html
+++ b/app/src/system_settings/reports/reports.html
@@ -5,8 +5,7 @@
             <input ng-model="vm.chartAval" >
         </td >
 
-        <md-button ng-click="vm.chartA()" ">rapport A</md-button>
-
+        <md-button ng-click="vm.chartA()" ">Klik for rapport pr. uge</md-button>
 
     </md-card-content>
 
@@ -16,7 +15,7 @@
             <input ng-model="vm.chartBval" >
         </td >
 
-        <md-button ng-click="vm.chartB()" >rapport B</md-button>
+        <md-button ng-click="vm.chartB()" >Klik for rapport pr. år</md-button>
 
     </md-card-content>
 
