--- a/app/src/system_settings/reports/reports.html
+++ b/app/src/system_settings/reports/reports.html
@@ -1,7 +1,8 @@
 <md-card>
     <md-card-content label="sdafads">
 
-        <td md-input-container class="md-block">
+
+        <td md-input-container class="md-block" > <label>År</label>
             <input ng-model="vm.chartAval" >
         </td >
 
@@ -11,7 +12,7 @@
 
     <md-card-content>
 
-        <td md-input-container class="md-block">
+        <td md-input-container class="md-block"><label>År</label>
             <input ng-model="vm.chartBval" >
         </td >
 
