--- a/app/src/flowchart/data-row.html
+++ b/app/src/flowchart/data-row.html
@@ -11,7 +11,27 @@
             <div flex="40">{{i.mainCharge}}</div>
 
             <div class="card-content__actions">
-                <md-button class="md-raised" ng-disabled="vm.saveShow" ng-click="vm.editing=true;collapsed=vm.editCase(i);save=collapsed;" ng-hide="vm.saveShow">Ret</md-button>
+
+                ​<input id="{{ i.node_uuid }}_1" type="checkbox" ng-model="i.box1" ng-click="vm.testclick(i)" /><label for="{{ i.node_uuid }}_1">TO</label>&nbsp;​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
+                ​<input id="{{ i.node_uuid }}_2" type="checkbox" id="2" ng-model="i.box2" ng-click="vm.testclick(i)" /><label for="2">F</label>​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​&nbsp;
+                ​<input id="{{ i.node_uuid }}_3" type="checkbox" id="3" ng-model="i.box3" /><label for="3">KP</label>​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​&nbsp;
+<br><br>
+                ​<input type="checkbox" id="4" ng-model="i.box4" /><label for="4">LEV</label>&nbsp;​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
+                ​<input type="checkbox" id="5" ng-model="i.box5" /><label for="5">FU</label>​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​&nbsp;
+                ​<input type="checkbox" id="6" ng-model="i.box6" /><label for="6">AKT</label>​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​&nbsp;
+                <br><br>
+<!--                <md-checkbox  ng-model="i.visitator.to" class="green" >TO</md-checkbox>-->
+<!--                <md-checkbox aria-label="TO" ng-model="i.visitator.f">F</md-checkbox>-->
+<!--                <md-checkbox aria-label="TO" ng-model="i.visitator.kp">KP</md-checkbox>-->
+
+
+
+<!--                <md-checkbox aria-label="TO" ng-model="content.selected">LEV</md-checkbox>-->
+<!--                <md-checkbox aria-label="TO" ng-model="content.selected">FU</md-checkbox>-->
+<!--                <md-checkbox aria-label="TO" ng-model="content.selected">AKT</md-checkbox>-->
+
+
+                <md-button class="md-raised" ng-disabled="vm.saveShow" ng-click="vm.editing=true;collapsed=vm.editCase(i);save=collapsed;" ng-hide="!collapsed">Ret</md-button>
                 <md-button class="md-raised md-primary" ng-click="save=false;vm.editing=false;;vm.save(i.node_uuid, i.doctor, i.socialworker, i.psychologist, i.status)" ng-show="vm.saveShow">Gem</md-button>
                 <md-button class="md-raised" ng-click="save=false;vm.editing=false;;vm.cancel(i.node_uuid)" ng-show="vm.saveShow">Annuller</md-button>
 
@@ -148,8 +168,8 @@
                     <table md-table>
                         <tbody md-body>
                             <!-- samtykke, start -->
-                            <tr md-row>
-                                <td md-cell class="key">Samtykke til oplysninger:</td>
+                            <tr md-row> <!--renamed to Sagsresumé in #36539 -->
+                                <td md-cell class="key">Sagsresumé:</td>
                                 <td md-cell class="value" ng-hide="vm.editperid == i.node_uuid" id="samtykkeDisplay_{{ i.node_uuid }}">{{i.samtykkeopl}}</td>
                                 <td md-cell class="value" ng-show="vm.editperid == i.node_uuid">
                                     <md-input-container>
