--- a/app/src/flowchart/flowchart.html
+++ b/app/src/flowchart/flowchart.html
@@ -15,6 +15,14 @@
         padding: 8px;
     }
 
+    .priority {
+        width: 25px;
+        left: 23px;
+        background-color: red;
+    }
+
+
+
     .md-title h3 {
         margin: 0;
     }
@@ -161,6 +169,8 @@
 </style>
 
 <md-card>
+
+
 
     <ng-include src="'app/src/flowchart/flowchart_navigation.html'"></ng-include>
     <ng-include src="'app/src/flowchart/flowchart_headings.html'"></ng-include>
