--- a/app/src/flowchart/data-row.html
+++ b/app/src/flowchart/data-row.html
@@ -9,7 +9,7 @@
         <div layout="row">
             <div flex="15">{{i.creationDate | customFlowChartDate }} </div>
             <div flex="15">{{i.doctor  }}</div>
-            <div flex="15"><span class="go-to-case-link" ng-click="vm.gotoCase(i.caseNumber)">{{i.cprNumber}}</span> <img ng-show="i.redflag" src="app/assets/images/priority_high-24px.svg" class="priority"></div>
+            <div flex="15"><span class="go-to-case-link" ng-click="vm.gotoCase(i.caseNumber)">{{i.cprNumber}}</span> <img ng-show="i.redflag" src="app/assets/images/priority.png" class="priority"></div>
             <div flex="15">{{i.firstName}}</div>
             <div flex="15">{{i.lastName}}</div>
             <div flex="40">{{i.mainCharge}}</div>
