styling of visitator html

--- a/app/src/flowchart/flowchart.html
+++ b/app/src/flowchart/flowchart.html
@@ -1,4 +1,5 @@
 <style>
+<style>
     .anchor {
         display: block;
         position: relative;
@@ -166,6 +167,13 @@
     table.md-table td.md-cell md-input-container .md-errors-spacer {
         min-height: 0;
     }
+
+    .visitator {
+
+
+
+    }
+
 </style>
 
 <md-card>
