--- a/app/src/flowchart/flowchart_headings.html
+++ b/app/src/flowchart/flowchart_headings.html
@@ -39,6 +39,13 @@
                     <md-icon ng-show="!vm.clickmainCharge">arrow_downward</md-icon>
                 </div>
 
+                <div flex="5">
+                </div>
+
+                <div flex="15">
+                    <CENTER>{{'FLOWCHART.VISITATION' | translate}}</CENTER>
+                </div>
+
                 <div class="card-content__actions"></div>
 
             </div>
