--- a/app/src/flowchart/data-row.html
+++ b/app/src/flowchart/data-row.html
@@ -18,7 +18,7 @@
             <div flex="5"></div>
             <div flex="15">
                 <table>
-                    <tr>
+                    <tr align="center">
                         <td>
                             ​<input id="{{ i.node_uuid }}_1" type="checkbox" ng-model="i.box1" ng-click="vm.visitate(i, $event)" /><label for="{{ i.node_uuid }}_1">TO</label>&nbsp;​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
                         </td>
@@ -29,7 +29,7 @@
                             ​<input id="{{ i.node_uuid }}_3" type="checkbox" id="3" ng-model="i.box3" ng-click="vm.visitate(i, $event)" /><label for="{{ i.node_uuid }}_3">KP</label>​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​&nbsp;
                         </td>
                     </tr>
-                    <tr>
+                    <tr align="center">
                         <td>
                             ​<input type="checkbox" id="{{ i.node_uuid }}_4" ng-model="i.box4" ng-click="vm.visitate(i, $event)"/><label for="{{ i.node_uuid }}_4">LEV</label>&nbsp;​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
                         </td>
@@ -43,7 +43,7 @@
                         </td>
                     </tr>
                 </table>
-            </div>
+                </div>
 
 
             <div class="card-content__actions">
