more pretty gui

--- a/app/src/flowchart/data-row.html
+++ b/app/src/flowchart/data-row.html
@@ -35,7 +35,7 @@
                         </td>
 
                         <td>
-                            ​<input type="checkbox" id="{{ i.node_uuid }}_5" ng-model="i.box5" ng-click="vm.visitate(i, $event)" /><label for="{{ i.node_uuid }}_5">FU</label>​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​&nbsp;
+                            ​<input type="checkbox" id="{{ i.node_uuid }}_5" ng-model="i.box5" ng-click="vm.visitate(i, $event)" /><label for="{{ i.node_uuid }}_5">PU</label>​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​&nbsp;
                         </td>
 
                         <td>
