Refactor code so that the logic for the "back" button in the header is contained within the header component.

--- a/app/src/header/header.view.html
+++ b/app/src/header/header.view.html
@@ -36,7 +36,7 @@
                 <h2>{{vm.title}}</h2>
             </a>
 
-            <md-button ng-if="vm.backtosearch"  title="tilbage til søgning" ui-sref="administration" ng-click="vm.gobacktosearch()">
+            <md-button ng-if="vm.previous"  title="tilbage til søgning" ui-sref="administration" ng-click="vm.goback()">
                         <span>tilbage til søgning</span>
             </md-button>
 
