--- a/app/src/flowchart/flowchart_minesager.html
+++ b/app/src/flowchart/flowchart_minesager.html
@@ -3,7 +3,7 @@
 <div class="md-title"><h3>Arrestanter:</h3></div>
 
 <div class="flowchart-content">
-    <div ng-repeat="i in vm.ongoing.arrestanter">
+    <div ng-repeat="i in ongoing.arrestanter">
         <ng-include src="'app/src/flowchart/data-row.html'"></ng-include>
     </div>
 </div>
@@ -11,7 +11,7 @@
 <div class="md-title"><h3>Andre:</h3></div>
 
 <div class="flowchart-content">
-    <div ng-repeat="i in vm.ongoing.andre">
+    <div ng-repeat="i in ongoing.andre">
         <ng-include src="'app/src/flowchart/data-row.html'"></ng-include>
     </div>
 </div>
